check_output.txt
    Checking launch v0.3.141592 (/home/leechristophermurray/Projects/launch)
error[E0412]: cannot find type `Window` in this scope
  --> src/interface/ports.rs:50:39
   |
50 |     fn get_open_windows(&self) -> Vec<Window>;
   |                                       ^^^^^^ not found in this scope
   |
help: consider importing one of these structs
   |
 1 + use crate::domain::model::Window;
   |
 1 + use gtk4::Window;
   |

warning: unused imports: `TextBuffer` and `TextView`
 --> src/infrastructure/ui/app_window.rs:5:5
  |
5 |     TextView, TextBuffer, Button, ScrolledWindow, Window, MessageDialog, DialogFlags,
  |     ^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: use of deprecated associated function `gtk4::style_context::<impl gtk4::StyleContext>::add_provider_for_display`: Use gtk::style_context_add_provider_for_display instead.
  --> src/infrastructure/ui/app_window.rs:69:19
   |
69 |     StyleContext::add_provider_for_display(
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: unused variable: `i`
   --> src/infrastructure/ui/app_window.rs:597:18
    |
597 |             for (i, action) in acts.borrow().iter().enumerate() {
    |                  ^ help: if this is intentional, prefix it with an underscore: `_i`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0412`.
warning: `launch` (bin "launch") generated 3 warnings
error: could not compile `launch` (bin "launch") due to 1 previous error; 3 warnings emitted
